--- a/SchoolTasks2024/SchoolTasks2024.vcxproj
+++ b/SchoolTasks2024/SchoolTasks2024.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="exercise_1_250924.c" />
+	<ClCompile Include="exercise_1_week1.c" />
+	<ClCompile Include="exercise_2_week1.c" />
+	<ClCompile Include="exercise_3_week1.c" />
+	<ClCompile Include="exercise_4_week1.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
